--- a/RentalCars/RentalCars/Areas/Admin/Views/Cars/All.cshtml
+++ b/RentalCars/RentalCars/Areas/Admin/Views/Cars/All.cshtml
@@ -8,7 +8,7 @@
 	Layout = "~/Pages/Shared/_layout.cshtml";
 }
 
-<h1>All Cars</h1>
+<h1>Accept Cars</h1>
 
 <table class="table table-striped">
 	<thead class="thead-dark">
