--- a/RentalCars/RentalCars/Pages/Cars/Details.cshtml
+++ b/RentalCars/RentalCars/Pages/Cars/Details.cshtml
@@ -7,7 +7,7 @@
 <h2 class="text-center">House Details</h2>
 <hr />
 @{
-    var userId = User.GetId();
+   // var userId = User.GetId();
 
     var base64 = Convert.ToBase64String(Model.CarPhoto);
     var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
