--- a/RentalCars/RentalCars/Pages/Home/Pay.cshtml
+++ b/RentalCars/RentalCars/Pages/Home/Pay.cshtml
@@ -2,66 +2,92 @@
 @using RentalCars.Core.Services.Bookings
 @inject ICarService carService
 @inject IBookingService bookingService
-
 @model PaymentsModel
+
 @{
-    ViewData["Title"] = "Payment";
-    Layout = "~/Pages/Shared/_layout.cshtml";
+	ViewData["Title"] = "Payment";
 }
-    <link rel="stylesheet" href="~/css/payment.css" />
 
- <form method="post">
-<div class="row">
-  <div class="col-75">
-    <div class="container">
-     <div class="row">
-          <div class="col-50">
-            <h3>Payment</h3>
-           <div class="form-group">
-                            <label asp-for="FullName"></label>
-                            <input asp-for="FullName" class="form-control" placeholder="Top Auto, Best Car, etc...">
-                            <span asp-validation-for="FullName" class="small text-danger"></span>
-            </div>
-                        <div class="form-group">
-                            <label asp-for="CreditCardNumber"></label>
-                            <input asp-for="CreditCardNumber" class="form-control" placeholder="1111-2222-3333-4444">
-                            <span asp-validation-for="CreditCardNumber" class="small text-danger"></span>
-                        </div>
-              <div class="form-group">
-                            <label asp-for="ExpMonth"></label>
-                            <input asp-for="ExpMonth" class="form-control" placeholder="September">
-                            <span asp-validation-for="ExpMonth" class="small text-danger"></span>
-                        </div>
+<link rel="stylesheet" href="~/css/payment.css" />
 
-                        <div class="form-group">
-                            <label asp-for="ExpYear"></label>
-                            <input asp-for="ExpYear" class="form-control" placeholder="2022">
-                            <span asp-validation-for="ExpYear" class="small text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="CVV"></label>
-                            <input asp-for="CVV" class="form-control" placeholder="362">
-                            <span asp-validation-for="CVV" class="small text-danger"></span>
-                        </div>
-            </div>
-          </div>
-        </div>
- 
-        <input type="submit" value="Pay" class="btn">
-    </div>
-  </div>
-      </form>
-  
-@*  <div class="col-25">
-    <div class="container">
-      <h4>Cart
-        <span class="price" style="color:black">
-          <i class="fa fa-shopping-cart"></i>
-          <b>4</b>
-        </span>
-      </h4>
-      <p><a href="#"></a> <span class="Price"></span></p>
-      <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
-    </div>
-  </div>
-</div>*@
+<form method="post">
+	<div class="row">
+		<div class="col-75">
+			<div class="container">
+				<div class="row">
+					<div class="col-50">
+						<h3>Payment</h3>
+						<div class="form-group">
+							<label asp-for="FullName"></label>
+							<input asp-for="FullName" class="form-control" placeholder="Petar Petrov">
+							<span asp-validation-for="FullName" class="small text-danger"></span>
+						</div>
+						<div class="form-group">
+							<label asp-for="CreditCardNumber"></label>
+							<input asp-for="CreditCardNumber" class="form-control" placeholder="1111-2222-3333-4444">
+							<span asp-validation-for="CreditCardNumber" class="small text-danger"></span>
+						</div>
+						<div class="form-group">
+							<label asp-for="ExpMonth"></label>
+							<input asp-for="ExpMonth" class="form-control" placeholder="September">
+							<span asp-validation-for="ExpMonth" class="small text-danger"></span>
+						</div>
+
+						<div class="form-group">
+							<label asp-for="ExpYear"></label>
+							<input asp-for="ExpYear" class="form-control" placeholder="2022">
+							<span asp-validation-for="ExpYear" class="small text-danger"></span>
+						</div>
+						<div class="form-group">
+							<label asp-for="CVV"></label>
+							<input asp-for="CVV" class="form-control" placeholder="362">
+							<span asp-validation-for="CVV" class="small text-danger"></span>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<input type="submit" value="Pay" class="btn">
+		</div>
+	</div>
+</form>
+
+<div class="col-25">
+	<div class="container">
+		<h4>
+			Cart
+			<span class="price" style="color:black"></span>
+		</h4>
+		<table class="table table-striped">
+			<thead class="thead-dark">
+				<tr>
+					<th scope="col">Brand</th>
+					<th scope="col">Model</th>
+					<th scope="col">Price</th>
+					<th scope="col">Car Year</th>
+					<th scope="col">Booking date</th>
+					<th scope="col">Returning date</th>
+					<th scope="col">Dealer name and phone number</th>
+					<th scope="col">Approved</th>
+					<th scope="col"></th>
+				</tr>
+			</thead>
+			<tbody>
+				@{
+
+				}
+				<tr>
+					<td scope="col">@Model.Car.Brand</td>
+					<td scope="col">@Model.Car.Model</td>
+					<td scope="col">@Model.Book.DailyPrice</td>
+					<td scope="col">@Model.Car.Year</td>
+					<td scope="col">@Model.Book.BookingDate</td>
+					<td scope="col">@Model.Book.ReturnDate</td>
+					<td scope="col">@Model.Book.ReturnDate</td>
+					<td scope="col">@Model.Dealer.Name + @Model.Dealer.PhoneNumber/td>
+					<td scope="col">@(Model.Book.IsConfirmedByDealer && Model.Book.IsConfirmedByAdmin ? "Yes" : "No")</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
