--- a/RentalCars/RentalCars/Pages/Home/Pay.cshtml
+++ b/RentalCars/RentalCars/Pages/Home/Pay.cshtml
@@ -18,13 +18,14 @@
 					<div class="col-50">
 						<h3>Payment</h3>
 						<div class="form-group">
-							<label asp-for="FullName"></label>
-							<input asp-for="FullName" class="form-control" placeholder="Petar Petrov">
-							<span asp-validation-for="FullName" class="small text-danger"></span>
+							<label asp-for="NameOnCard"></label>
+							<input asp-for="NameOnCard" class="form-control" placeholder="Petar Petrov">
+							<span asp-validation-for="NameOnCard" class="small text-danger"></span>
 						</div>
 						<div class="form-group">
 							<label asp-for="CreditCardNumber"></label>
-							<input asp-for="CreditCardNumber" class="form-control" placeholder="1111-2222-3333-4444">
+							<input asp-for="CreditCardNumber" class="form-control" placeholder="1111-2222-3333-4444" pattern="[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}"
+								   required>
 							<span asp-validation-for="CreditCardNumber" class="small text-danger"></span>
 						</div>
 						<div class="form-group">
@@ -84,7 +85,7 @@
 					<td scope="col">@Model.Book.BookingDate</td>
 					<td scope="col">@Model.Book.ReturnDate</td>
 					<td scope="col">@Model.Book.ReturnDate</td>
-					<td scope="col">@Model.Dealer.Name + @Model.Dealer.PhoneNumber/td>
+					<td scope="col">@Model.Dealer.Name + @Model.Dealer.PhoneNumber </td>
 					<td scope="col">@(Model.Book.IsConfirmedByDealer && Model.Book.IsConfirmedByAdmin ? "Yes" : "No")</td>
 				</tr>
 			</tbody>
