--- a/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
+++ b/RentalCars/RentalCars/Pages/Shared/_Layout.cshtml
@@ -1,8 +1,10 @@
 ﻿@using RentalCars.Core.Extensions
 @using RentalCars.Core.Models.Dealers
+@using RentalCars.Core.Services.Bookings
 @using static RentalCars.Infrastructure.Data.Models.Constants.DataConstants.Web;
 
 @inject IDealerService Dealers
+@inject IBookingService Booking
 @inject SignInManager<IdentityUser> SignInManager
 
 <!DOCTYPE html>
@@ -34,18 +36,13 @@ scratch. This page gets rid of all links and provides the needed markup only.
 	<div class="wrapper">
 
 		<!-- Navbar -->
-			@if (SignInManager.IsSignedIn(User))
-			{
-				var userId = User.GetId();
-				var userIsDealer = Dealers.IsDealer(userId);
-
-			}
 		<nav class="main-header navbar navbar-expand navbar-white navbar-light">
 			<!-- Left navbar links -->
 			@if (SignInManager.IsSignedIn(User))
 			{
 				var userId = User.GetId();
 				var userIsDealer = Dealers.IsDealer(userId);
+				var book = Booking.GetBookByUserId(userId);
 
 				<ul class="navbar-nav">
 					<li class="nav-item">
@@ -66,6 +63,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
 						 <a class="nav-link" asp-area="Admin" asp-controller="Booking" asp-action="GetOfferts">Approved bookings<i class="nav-link"></i></a>
 						</li>
 					}
+					@if (book != null)
+					{
+						<li class="nav-item">
+						 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Pay">Pay<i class="nav-link"></i></a>
+						</li>
+					}
 					@if (User.IsAdmin() == false)
 					{
 						@if (userIsDealer)
@@ -80,7 +83,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 								<a class="nav-link" asp-area="" asp-controller="Dealers" asp-action="Rent">Offerts<i class="nav-link"></i></a>
 							</li>
 						}
-
+						
 						<li class="nav-item">
 							<a class="nav-link" asp-area="" asp-controller="Cars" asp-action="All">Avaible Cars<i class="nav-link"></i></a>
 						</li>	
