--- a/RentalCars/RentalCars/Pages/Home/Pay.cshtml
+++ b/RentalCars/RentalCars/Pages/Home/Pay.cshtml
@@ -24,8 +24,7 @@
 						</div>
 						<div class="form-group">
 							<label asp-for="CreditCardNumber"></label>
-							<input asp-for="CreditCardNumber" class="form-control" placeholder="1111-2222-3333-4444" pattern="[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}"
-								   required>
+							<input asp-for="CreditCardNumber" class="form-control">
 							<span asp-validation-for="CreditCardNumber" class="small text-danger"></span>
 						</div>
 						<div class="form-group">
@@ -33,7 +32,6 @@
 							<input asp-for="ExpMonth" class="form-control" placeholder="September">
 							<span asp-validation-for="ExpMonth" class="small text-danger"></span>
 						</div>
-
 						<div class="form-group">
 							<label asp-for="ExpYear"></label>
 							<input asp-for="ExpYear" class="form-control" placeholder="2022">
